openshift/basic-ocp-demo.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: basic-ocp-demo
  name: basic-ocp-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: basic-ocp-demo
  template:
    metadata:
      labels:
        app: basic-ocp-demo
    spec:
      containers:
      - image: quay.io/freedomben/basic-ocp-demo:latest
        name: basic-ocp-demo
        imagePullPolicy: Always
        ports:
        - containerPort: 4567
          protocol: TCP
        readinessProbe:
          httpGet:
            scheme: HTTP
            path: /healthz
            port: 4567
          initialDelaySeconds: 5
          periodSeconds: 1
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: basic-ocp-demo
  name: basic-ocp-demo
spec:
  ports:
  - name: 4567-tcp
    port: 4567
    protocol: TCP
    targetPort: 4567
  selector:
    deployment: basic-ocp-demo

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: basic-ocp-demo
  name: basic-ocp-demo
spec:
  port:
    targetPort: 4567-tcp
  to:
    kind: Service
    name: basic-ocp-demo
    weight: 100
  wildcardPolicy: None
  tls:
    termination: edge
